Version=1.2.1026
 - Anzahl der Spalten und Zeilen in der Systemsteuerung variabel
  define ( 'UEBERSICHTSPALTEN' , 3      );
  define ( 'UEBERSICHTZEILEN'  , 10      );
Version=1.2.1025
 - Anzeige der Pingwerte , RSSISource , RSSITarget
Version=1.2.1024
 - Schalten eines Circles durch externe Scripte
 - 'AUTORESTORESWITCH' in der Konfiguration schaltet Circle nach Stromausfall 
    wieder in die letzte Sollstellung  
Version=1.2.1023
 - Anzeigen in eine ~htmlBox
 - Profile der Variablen werden nicht mehr ueberschrieben
 - Profile haben eigene Konfigurationsdatei
 - Aktionen bei bestimmten Werten sind moeglich
Version=1.2.1022
 - automatisch Aktualisierung Highchart
Version=1.2.1021
 - andere Stromzaehler jetzt OK
 - Zusatzanzeige ob Zaehler in Gesamt und Gruppe
 - Menusystem komplett ueberarbeitet
 - Option in Config fuer zaehlen in Gesamt und Gruppe
 - diverse Fehler behoben
Version=1.2.1018
 - Kalibrierdaten werden in einer Variablen gespeichert
 - andere Stromzaehler werden unterstuetzt
Version=1.2.1017
 - Mysql: Geraetegruppe wird mit abgespeichert
 - css-File fuer eigene Webfrontgestaltung
 - Changelog-Anzeige in der Versionsanzeige
 - Mysql: Logadresse mit in Tabelle Gesamt
 - alternativer Button fuer PlugwiseTab moeglich
 - automatische Benachrichtigung bei neuen Updates
 