@@ -388,8 +388,6 @@ function plugwise_0013_received($buf)
 	$unknown2   = substr($buf,44,4);
 	$unknown3   = substr($buf,48,4);
 
-	$text = $mcID ."-".$totalpulse." ".$unknown1." ".$unknown2." ".$unknown3;
-	logging($text,$mcID .'plugwiseunknowninformation.log' );
 
 	if ( !$myCat)
 	   {
@@ -465,6 +463,13 @@ function plugwise_0013_received($buf)
 			$offNoise = $offNoise_;
 
 
+	//IPS_LogMessage("Kalibrierdaten ungleich offNoise","[".$offNoise."]");
+		$verbrauch = pulsesToKwh(hexdec($totalpulse), $offNoise, $offTotal, $gainA, $gainB);
+		$text = $mcID ."-".$totalpulse." ".$unknown1." ".$unknown2." ".$unknown3."---".$verbrauch;
+		logging($text,$mcID .'plugwiseunknowninformation.log' );
+
+
+
 		   }
 		
 		// keine Kalibrierung
@@ -478,7 +483,7 @@ function plugwise_0013_received($buf)
 
 		// Aktueller Verbrauch in Watt ermitteln
 		if ( hexdec($pulse) > 0 )
-		   {
+		   { 
 			$value 	 = hexdec($pulse)/8;
 			$out 		 = (pow(($value+$offNoise),2)*$gainB)+(($value+$offNoise)*$gainA)+$offTotal;
 			$Leistung = (($out ) / 468.9385193)*1000;
@@ -513,6 +518,9 @@ function plugwise_0013_received($buf)
 
 		
 	logging($text,'plugwisepowerinformation.log' );
+
+
+
 
 	}
 	
@@ -999,8 +1007,17 @@ function request_circle_data()
       if ( $t > $timeoutcircle )  // laenger als x Minuten keine Daten
       	{
       	$id = IPS_GetVariableIDByName("Error", $item);
-			if ( GetValue($id ) != 1 )
+      	
+         if ( defined('RUNSCRIPT_CIRCLEFAILED') )
+         	if ( GetValue($id ) == 0 )
+					if ( IPS_ScriptExists(RUNSCRIPT_CIRCLEFAILED) )
+				   	IPS_RunScriptEx(RUNSCRIPT_CIRCLEFAILED,array("CIRCLE" => IPS_GetName($item)));
+
+      	
+			if ( GetValue($id ) != 1 ) // Error setzen
 				SetValue($id,1);
+				
+				
 			// wenn Circle nicht erreichbar Leistung auf 0
 			IPS_LogMessage("Plugwise Circle ausgefallen",$t);
       	$id = IPS_GetVariableIDByName("Leistung", $item);
@@ -1019,8 +1036,6 @@ function request_circle_data()
 
 		PW_SendCommand("0012".$id_info['ObjectIdent']);
 		
-		//SetValue(IPS_GetVariableIDByName ("LastMessage", $item),microtime(true));
-
 		PW_SendCommand("0023".$id_info['ObjectIdent']);
 		
 
